<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serialPro</name>
  <version>0.0.0</version>
  <description>Serial communication node for ROS2</description>
  <maintainer email="1571563104@qq.com">ymc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 添加运行时依赖 -->
  <depend>rclcpp</depend>
  <depend>robot_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>